# RtspToRtmp

3rdlib/ffmpeg4.2.3/lib/: libswresample.so.3
src/: CMakeLists.txt  IRtsp2Rtmp.h  Rtsp2Rtmp.cpp  Rtsp2Rtmp.h  bash.sh
src/Queue/: PacketQueue.h
src/TransStream/: TransStream.cpp  TransStream.h
